python-django-discover-runner (1.0-2) UNRELEASED; urgency=low

  * Fix non-plural BSD-3-clause reference in debian/copyright.

 -- Thomas Goirand <zigo@debian.org>  Thu, 08 Aug 2013 22:18:34 +0200

python-django-discover-runner (1.0-1) unstable; urgency=low

  * Initial releas (Closes: #714134).

 -- Thomas Goirand <zigo@debian.org>  Wed, 26 Jun 2013 14:51:58 +0800