@@ -1,6 +1,7 @@
 python-django-discover-runner (1.0-2) UNRELEASED; urgency=low
 
   * Fix non-plural BSD-3-clause reference in debian/copyright.
+  * Added Python3 support.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 08 Aug 2013 22:18:34 +0200
 
